# learn-vector-databaase-mongodb

./: README.md
vectordb/: pyproject.toml
vectordb/vectordb/: pymongo_test.py
